--- a/ThePerpetualSample/pom.xml
+++ b/ThePerpetualSample/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>opencsv</artifactId>
             <version>5.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.0</version>
+        </dependency>
     </dependencies>
 
 </project>
