--- a/ThePerpetualSample/pom.xml
+++ b/ThePerpetualSample/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.11.1</version>
+        </dependency>
     </dependencies>
 
 </project>
